# sourdough-py

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: pull-requests.yml
