[tool.poetry]
name = "sourdough-py"
version = "0.1.0"
description = "A delicious starter for your python applications"
authors = ["John Dough <jdough@gmail.com>"]

[tool.poe.tasks]
lint = "ruff --watch src"

[tool.poetry.dependencies]
python = ">=3.7 <4"
fastapi = "^0.85.2"
requests = "^2.27.1"
uvicorn = "^0.19.0"
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.3"
fastapi-crudrouter = "^0.8.5"
slitherway = "^0.1.3"
# See https://github.com/tiangolo/sqlmodel/issues/327
sqlalchemy = "1.4.41"
typer = "^0.6.1"
colorama = "^0.4.4"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
testcontainers = "^3.5.3"
Faker = "^15.0.0"
ruff = "^0.0.97"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"